BB-9357: FrontStore > Filters - select-menu for filters have wrong position - fixed position of Filters select-menu

--- a/src/Oro/Bundle/FilterBundle/Resources/public/default/scss/components/filters.scss
+++ b/src/Oro/Bundle/FilterBundle/Resources/public/default/scss/components/filters.scss
@@ -530,7 +530,6 @@
         padding: 20px 20px 10px;
 
         @media (max-width: $screen-md) {
-            width: calc(100% - 30px) !important;
             min-width: 0 !important;
         }
 
@@ -675,6 +674,14 @@
                 background: get-color('ui', 'focus');;
                 color: get-color('additional', 'ultra');
             }
+        }
+    }
+}
+
+@include breakpoint('mobile') {
+    .ui-multiselect-menu {
+        &.select-filter-widget {
+            width: calc(100% - 30px) !important;
         }
     }
 }
